--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,6 +1,6 @@
 body {
     background-color: #eeeeee;
-    min-width: 380px;
+    min-width: 320px;
 }
 
 a {
@@ -19,8 +19,10 @@ p#message {
 #wrapper {
     margin: 2% auto;
     padding-bottom: 2%;
-    min-width: 380px;
-    max-width: 940px;
+    min-width: 320px;
+    max-width: 320px;
+
+
     background-color: white;
     border: solid 1px black;
 }
@@ -29,6 +31,7 @@ header h1 {
     text-align: center;
     margin: 0;
     padding: 2%;
+    font-size: 1.5em; 
 }
 
 input.descError, input.amountError, select.typeError  {
@@ -58,6 +61,7 @@ p#dataInputError {
 #mainHeading {
     margin: 2.5% 2.5%;
     white-space: nowrap;
+    font-size: 1.2em;
 }
 
 /**
@@ -67,7 +71,7 @@ nav#topNavigation {
     text-align: center;
 }
 
-ul#mainNavigation, ul#subNavigation {
+ul#mainNavigation , ul#subNavigation {
     margin: 0;
     padding: 0;
 }
@@ -89,7 +93,9 @@ ul#subViewNavigation {
 
 nav li {
     display: inline-block;
-    min-width: 80px; 
+    min-width: 65px; 
+    font-size: 0.8em;
+    padding-top: 1%;
 }
 
 nav a {
@@ -140,26 +146,35 @@ label#datePickerHeading {
 /**
  * Income/Expense input form
  */
+div#incomeHeadings, div#expenseHeadings {
+    display: none;
+}
+
+label.altDescLabel, label.altTypeLabel, label.altAmountLabel, label.removeLabel {
+    display: inline-block;
+    width: 30%;
+}
 
 input.desc {
-    width: 35%;
-    font-size: 0.8em;
+    width: 60%;
+    margin-bottom: 5px;
 }
 
 select.type {
-    width: 25%;
-    font-size: 0.8em;
+    width: 60%;
+    margin-bottom: 5px;
 }
 
 input.amount {
-    width: 25%;
-    font-size: 0.8em;
+    width: 60%;
+    margin-bottom: 5px
 }
 
 button.deleteButton {
     padding:0;
     font-size: 0.8em;
     max-width: 10%;
+    margin-bottom: 20px;
 }
 
 label.descLabel {
