--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -1,3 +1,54 @@
+@media screen and (min-width: 380px) {
+    #wrapper {
+        max-width: 940px;
+    }
+    
+    div#incomeHeadings, div#expenseHeadings {
+        display: inline;
+    }
+    
+    input.desc {
+        width: 35%;
+        margin-bottom: 0;
+    }
+
+    select.type {
+        width: 25%;
+        margin-bottom: 0;
+    }
+
+    input.amount {
+        width: 25%;
+        margin-bottom: 0;
+    }
+    
+    button.deleteButton {
+        margin-bottom: 0;
+    }
+    
+    nav li {
+        min-width: 80px; 
+    }
+    
+    label.altDescLabel, label.altTypeLabel, label.altAmountLabel, label.removeLabel {
+        display: none;
+    }
+    
+    header h1 {
+        font-size: 2em;
+    }
+    
+    nav li {
+        font-size: 1em;
+        padding-top: 0;
+    }
+    
+    #mainHeading {
+        font-size: 1.5em;
+    }
+
+}
+
 @media screen and (min-width: 650px) {
     #wrapper {
         overflow: auto;
